--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         }
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "facebook/webdriver": "^1.6"
+    },
     "require-dev": {
         "php": "^7.2",
         "phpstan/phpstan": "^0.10.5",
